--- a/SGHWeb/SGHWeb/Content/SGHWeb.css
+++ b/SGHWeb/SGHWeb/Content/SGHWeb.css
@@ -15,3 +15,42 @@
     color:#f00;
     font-weight:bold;
 }
+
+/* styles for validation helpers */
+.field-validation-error {
+    color: #e80c4d;
+    font-weight: bold;
+}
+
+.field-validation-valid {
+    display: none;
+}
+
+input.input-validation-error {
+    border: 1px solid #e80c4d;
+}
+
+input[type="checkbox"].input-validation-error {
+    border: 0 none;
+}
+
+.validation-summary-errors {
+    /*color: #e80c4d;
+    font-weight: bold;
+    font-size: 1.1em; //Originales MS*/
+    background: transparent url(../Images/Alert.png) no-repeat 5px 3px;
+    padding: 10px 5px 5px 15px;
+    margin-bottom: 10px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    color: #b94a48;
+    background-color: #f2dede;
+    border-color: #eed3d7;
+}
+
+.alert-danger {
+}
+
+.validation-summary-valid {
+    display: none;
+}
